--- a/monads.tex
+++ b/monads.tex
@@ -377,12 +377,12 @@ we will avoid the naming because it is not always the same as the
 a \mynameref{def:bifunctor}. 
 \end{remark}
 
+\section{Tensor product in Quantum mechanics}
+
 \begin{definition}[Tensor product]
   \label{def:tensor_product}
   TBD
 \end{definition}
-
-\begin{remark}{Tensor product in Quantum mechanics}
 
 The tensor product in quantum mechanics is used for
 representing a system that consists of multiple systems. For instance
@@ -401,17 +401,17 @@ The result system that describes both atom
 and light is represented as the tensor product $\mathcal{H}_{at}
 \otimes \mathcal{H}_f$.
 
+\begin{remark}[Hilbert-Schmidt correspondence]
 The morphisms of \textbf{FdHilb} category have a connection with
 \mynameref{def:tensor_product}. Consider the so called Hilbert-Schmidt
 correspondence for finite dimensional Hilbert spaces i.e. for given
 $\mathcal{A}$ and $\mathcal{B}$ there is a natural isomorphism between
-the tensor product and linear maps (aka morphisms) between
+the tensor product and \mynameref{def:linear_map}s (aka morphisms) between
 $\mathcal{A}$ and $\mathcal{B}$:
 \[
 \mathcal{A}^\ast \otimes \mathcal{B} \cong \hom(\mathcal{A}, \mathcal{B})
 \]
 where $\mathcal{A}^\ast$ - \mynameref{def:dual_space}.
-TBD
 \end{remark}
 
 \section{Category of endofunctors}
