--- a/monads.tex
+++ b/monads.tex
@@ -387,7 +387,7 @@ a \mynameref{def:bifunctor}.
   \[
   \phi: m \times n \to m \otimes n
   \]
-  such that $\forall a \in \cat{FdHilb}$ and for any (TBD verify)
+  such that $\forall a \in \cat{FdHilb}$ and for any
   bilinear
   \[
   f: m \times n \to a
