--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -635,10 +635,10 @@ Conjunction or logical OR is the operation with following rules
   \end{table}
 \end{definition}
 
-Operations in Boolean logic follow the distributive low:
+Operations in Boolean logic follow the distributive law:
 \begin{equation}
 a \land ( b \lor c) = (a \land b) \lor (a \land c) 
-\nonumber
+\label{eq:distributive_law_boolean}
 \end{equation}
 i.e. the operation $\land$ corresponds to multiplication and $\lor$ to
 sum. Therefore the $\cat{Proof}$ can be considered as a
@@ -995,6 +995,14 @@ TBD
 i.e. you can create only one element of the type.
 \end{example}
 
+TBD
+
+\subsection{Quantum logic and quantum computation}
+
+Different modifications of logic rules give us new computational
+models. One of example is the quantum computations. The quantum logic
+differs from Boolean one in the missing distributive law
+\eqref{eq:distributive_law_boolean}. 
 TBD
 
 \section{Quantum mechanics}
