Curry-Howard isomarphism as a separate chapter

--- a/cattheory.tex
+++ b/cattheory.tex
@@ -321,6 +321,7 @@
 \input ./introduction.tex
 \input ./basedefinitions.tex
 \input ./objectsmorphisms.tex
+\input ./curryhoward.tex
 %\input ./monoidalobject.tex
 \input ./functors.tex 
 \input ./nt.tex 
