--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -530,180 +530,7 @@ TBD
 \end{proof}
 \end{theorem}
 
-\section{Type algebra and Curry-Howard-Lambek correspondence}
-\label{sec:curry_howard_lambek}
-There is an interesting correspondence between computer programs and
-mathematical proofs. First of all consider a category of proofs
-\subsection{\textbf{Proof} category}
-\begin{definition}[Proposition]
-\label{def:proposition}
-\textit{Proposition} is a statement that either true or false.
-\end{definition}
-
-There are 2 main propositions
-\begin{definition}[True]
-\label{def:true}
-A true statement is one that is correct, either in all cases or at
-least in the sample case \cite{bib:studycom:truefalse}. 
-\end{definition}
-and
-\begin{definition}[False]
-\label{def:false}
-A false statement is one that is not correct \cite{bib:studycom:truefalse}. 
-\end{definition}
-
-
-\begin{example}[Proposition]
-\label{ex:proposition}
-There is an example of correct (true) proposition
-\[
-\forall n \in \mathbb{R}: n^2 \ge 0
-\]
-
-There is an example of incorrect (false) proposition
-\[
-\forall n \in \mathbb{C}: n^2 \ge 0,
-\]
-for instance $i \in \mathbb{C}$ gives $i^2 = -1$.
-
-\end{example}
-
-\begin{definition}[Implication]
-\label{def:implication} \textit{An implication} is a
-\mynameref{def:proposition} of the form $P \implies Q$ i.e. if $P$
-then $Q$ \cite{bib:whatisaproof}.
-\end{definition}
-
-The main logical deduction rule is the following
-\begin{definition}[Modus ponens]
-\label{def:modusponens}
-If $P$ is true and $P \implies Q$ is true then $Q$ is also true. The
-rule is often written as \cite{bib:whatisaproof}
-\[
-\frac{
-\begin{array}{c}
-P \\
-P \implies Q
-\end{array}
-}{Q}
-\]
-where if statements above the line are true then the statement below
-the line is also true.
-\end{definition}
-
-\begin{definition}[Proof]
-\label{def:proof}
-\textit{Proof} is a verification \cite{bib:whatisaproof} of a
-\mynameref{def:proposition} by a chain of logical deduction from a
-base set of axioms.
-\end{definition}
-
-Propositions can be combined into new propositions via the following
-logical operations
-\begin{definition}[Conjunction]
-\label{def:conjunction}
-Conjunction or logical AND is the operation with following rules
-  \begin{table}[H]
-    \centering
-    \caption{Conjunction}
-    \label{tab:conjunction}
-      \begin{tabular}{|l|l|l|}
-        \hline
-        $a$ & $b$ & $a \land b$ \\ \hline
-        True & True & True \\ \hline
-        True & False & False \\ \hline
-        False & True & False \\ \hline
-        False & False & False \\ \hline
-      \end{tabular}
-  \end{table}
-\end{definition}
-\begin{definition}[Disjunction]
-\label{def:disjunction}
-Conjunction or logical OR is the operation with following rules
-  \begin{table}[H]
-    \centering
-    \caption{Disjunction}
-    \label{tab:disjunction}
-      \begin{tabular}{|l|l|l|}
-        \hline
-        $a$ & $b$ & $a \lor b$ \\ \hline
-        True & True & True \\ \hline
-        True & False & True \\ \hline
-        False & True & True \\ \hline
-        False & False & False \\ \hline
-      \end{tabular}
-  \end{table}
-\end{definition}
-
-Operations in Boolean logic follow the distributive law:
-\begin{equation}
-a \land ( b \lor c) = (a \land b) \lor (a \land c) 
-\label{eq:distributive_law_boolean}
-\end{equation}
-i.e. the operation $\land$ corresponds to multiplication and $\lor$ to
-sum. Therefore the $\cat{Proof}$ can be considered as a
-\mynameref{def:distributive_category}. 
-
-\begin{definition}[\textbf{Proof} category]
-\label{def:proof_category}
-The $\cat{Proof}$ category is a category where \mynameref{def:proposition}s are
-\mynameref{def:object}s and \mynameref{def:proof}s are
-\mynameref{def:morphism}s. I.e. proofs are used as connectors between
-different propositions.
-\end{definition}
-
-Consider different objects and constructions of the proof (logic)
-theory from the categorical point of view
-\begin{example}[Initial object][\textbf{Proof}]
-\label{ex:proof_initial_object}
-The \textit{false} statement can be considered as the initial object
-because for any other statement exists only one proof from the false
-statement to that one.
-\end{example}
-
-\begin{example}[Terminal object][\textbf{Proof}]
-\label{ex:proof_terminal_object}
-The \textit{true} statement can be considered as the terminal object
-\end{example}
-
-\begin{example}[Product][\textbf{Proof}]
-\label{ex:proof_product}
-\mynameref{def:conjunction} can be considered as
-\mynameref{def:product} in \mynameref{def:proof_category}.
-\end{example}
-
-\begin{example}[Sum][\textbf{Proof}]
-\label{ex:proof_sum}
-\mynameref{def:disjunction} can be considered as
-\mynameref{def:sum} in \mynameref{def:proof_category}.
-\end{example}
-
-Thus we can declare the following correspondence (see
-\cref{tab:curry_howard_lambek}) between logic 
-proofs and \mynameref{def:cartesian_closed_category} and therefore
-also between programming languages.
-\begin{table}[H]
-  \centering
-  \caption{Relation between logic proofs and programming languages}
-  \label{tab:curry_howard_lambek}
-  \begin{adjustbox}{width=1\textwidth}
-    \small
-    \begin{tabular}{l|l|l}
-      \toprule
-      \mynameref{def:proof_category} & Programming language & 
-      \mynameref{def:cartesian_closed_category}\\
-      \midrule
-      \mynameref{def:proposition}/\mynameref{def:implication} & Type &
-      \mynameref{def:object} \\ 
-      \mynameref{def:proof} & Function type & \mynameref{def:exponential} \\
-      \mynameref{def:conjunction} & Product type & \mynameref{def:product} \\
-      \mynameref{def:disjunction} & Sum type & \mynameref{def:sum} \\
-      \mynameref{def:true} & unit type & \mynameref{def:terminal_object} \\
-      \mynameref{def:false} & botom type & \mynameref{def:initial_object} \\
-      \bottomrule
-    \end{tabular}
-  \end{adjustbox}
-\end{table}
+\section{Programming language examples. Type algebra}
 
 \subsection{\textbf{Hask} category}
 \begin{example}[Initial object][\textbf{Hask}]
@@ -995,14 +822,6 @@ TBD
 i.e. you can create only one element of the type.
 \end{example}
 
-TBD
-
-\subsection{Quantum logic and quantum computation}
-
-Different modifications of logic rules give us new computational
-models. One of example is the quantum computations. The quantum logic
-differs from Boolean one in the missing distributive law
-\eqref{eq:distributive_law_boolean}. 
 TBD
 
 \section{Quantum mechanics}
