Curry-Howard isomarphism as a separate chapter

--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,15 @@
 %% -*- coding:utf-8 -*-
+@misc{stanford:linear_logic,
+	author       =	{Di Cosmo, Roberto and Miller, Dale},
+	title        =	{Linear Logic},
+	booktitle    =	{The Stanford Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	url          =	{https://plato.stanford.edu/archives/win2016/entries/logic-linear/},
+	year         =	{2016},
+	edition      =	{Winter 2016},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
 @misc{github:cattheory_ivanmurashko,
   author = {Ivan Murashko},
   title = {Category Theory by Example},
