Curry-Howard isomarphism as a separate chapter

--- a/curryhoward.tex
+++ b/curryhoward.tex
@@ -183,7 +183,7 @@ classical logic in the logic the \mynameref{def:implication} has been
 modified. In the classical logic the both statements $P$ and $Q$ are
 valid after implication $P \implies Q$. But in linear logic we have
 another situation when the statement $P$ can be used only once and
-become invalid after usage. The situation then a resource can be used
+become invalid after the usage. The situation then a resource can be used
 only once is useful in different types of computations especially in
 concurrency. TBD
 
