--- a/notations.tex
+++ b/notations.tex
@@ -38,6 +38,8 @@
 \nomenclature{$\mathcal{H}_n$}{finite dimensional
   \mynameref{def:hilbert_space}}
 \nomenclature{$a^b$}{\mynameref{def:exponential}}
+\nomenclature{$P \implies Q$}{\mynameref{def:implication}}
+
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
