limits stub added

--- a/notations.tex
+++ b/notations.tex
@@ -39,7 +39,7 @@
   \mynameref{def:hilbert_space}}
 \nomenclature{$a^b$}{\mynameref{def:exponential}}
 \nomenclature{$P \implies Q$}{\mynameref{def:implication}}
-
+\nomenclature{$cone(b, f)$}{\mynameref{def:cone}}
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
