--- a/limits.tex
+++ b/limits.tex
@@ -5,24 +5,107 @@
 
 \begin{definition}[Diagram of shape]
 \label{def:diagram_of_shape}
-Let $\cat{A}$ and $\cat{B}$ are 2 categories. The \textit{diagram of
-  shape} $\cat{A}$ in $\cat{B}$ if a \mynameref{def:functor}
+\begin{figure}[H]
+  \centering
+  \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
+          width=.8pt,inner sep=1pt},every fit/.style={ellipse,draw,inner
+          sep=-2pt}]
+
+      % the texts
+
+      \node at (0,0) {$C$};        
+      \node at (0,3) {$D$};        
+
+      \node[ele,label=below:$a_i^{(C)}$] (ac) at (1,0) {};    
+      \node[ele,label=below:$a_j^{(C)}$] (bc) at (3,0) {};    
+      \node[ele,label=above:$a_i^{(D)}$] (ad) at (1,3) {};
+      \node[ele,label=above:$a_j^{(D)}$] (bd) at (3,3) {};
+
+      \node[draw,fit= (ac) (bc),minimum width=3.5cm, minimum
+        height=2cm] {} ;
+      \node[draw,fit= (ad) (bd),minimum width=3.5cm, minimum
+        height=2cm] {} ;
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ac) to
+      node[below]{$g_{ij}^{(C)}$} (bc);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ad) to
+      node[above]{$g_{ij}^{(D)}$} (bd);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ac) to
+      node[left]{$g_i^{(D)} = F(a_i^{(C)})$} (ad);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (bc) to
+      node[right]{$g_j^{(D)} = F(a_j^{(C)})$} (bd);
+  \end{tikzpicture}
+  \caption{Diagram of shape $F: \cat{C} \tof \cat{D}$. Objects
+    $a_{i,j}^{(C)} \in \catob{C}$ are mapped to $a_{i,j}^{(D)} \in
+    \catob{D}$. Morphisms $g_{ij}^{(C)} \in \cathom{C}$ are mapped to
+    $g_{ij}^{(D)} \in \cathom{D}$}  
+  \label{fig:diagram_of_shape}
+\end{figure}
+
+Let $\cat{C}$ and $\cat{D}$ are 2 categories. The \textit{diagram of
+  shape} $\cat{C}$ in $\cat{D}$ is a \mynameref{def:functor}
+(see \cref{fig:diagram_of_shape})
 \[
-F: \cat{A} \tof \cat{B}
+F: \cat{C} \tof \cat{D}
 \]
 \end{definition}
 
 \begin{definition}[Cone]
 \label{def:cone}
-Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{A}$ in $\cat{B}$.
-A \textit{cone} to $F$ is an object $b \in \catob{B}$ with
-\mynameref{def:morphism}s $f_a: b \to F(a)$ indexed by objects from
-$\cat{A}$. The cone is denoted as $cone(b, f)$.
+\begin{figure}[H]
+  \centering
+  \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
+          width=.8pt,inner sep=1pt},every fit/.style={ellipse,draw,inner
+          sep=-2pt}]
+
+      % the texts
+
+      \node at (0,0) {$C$};        
+      \node at (0,3) {$D$};        
+
+      \node[ele,label=left:$a_i^{(C)}$] (ac) at (1.5,0) {};    
+      \node[ele,label=right:$a_j^{(C)}$] (bc) at (3.5,0) {};    
+      \node[ele,label=left:$a_i^{(D)}$] (ad) at (1.5,3) {};
+      \node[ele,label=right:$a_j^{(D)}$] (bd) at (3.5,3) {};
+      \node[ele,label=above:$d$] (d) at (2.5,5) {};
+
+      \node[draw,fit= (ac) (bc),minimum width=4cm, minimum
+        height=2cm] {} ;
+      \node[draw,fit= (ad) (bd) (d),minimum width=5cm, minimum
+        height=4cm] {} ;
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (d) to
+      node[left]{$f^{(d)}_i$} (ad);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (d) to
+      node[right]{$f^{(d)}_j$} (bd);
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ac) to
+      node[below]{$g_{ij}^{(C)}$} (bc);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ad) to
+      node[above]{$g_{ij}^{(D)}$} (bd);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ac) to
+      node[left]{$a_i^{(D)} = F(a_i^{(C)})$} (ad);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (bc) to
+      node[right]{$a_j^{(D)} = F(a_j^{(C)})$} (bd);
+  \end{tikzpicture}
+  \caption{Cone $cone(d, f^{(d)})$} 
+  \label{fig:cone}
+\end{figure}
+
+
+Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{C}$ in $\cat{D}$.
+A \textit{cone} to $F$ is an object $d \in \catob{D}$ with
+\mynameref{def:morphism}s $f_a: d \to a_D$, where $a_D = F(a)$
+indexed by objects from 
+$\cat{C}$. The cone is denoted as $cone(d, f)$.
 \end{definition}
 
 \begin{definition}[Limit]
 \label{def:limit}
-TBD
+\textit{Limit} of \mynameref{def:diagram_of_shape} $F: \cat{A} \tof
+\cat{B}$ is a \mynameref{def:cone} $cone(l, f)$ to $F$ such that for 
+any other $cone(m, g)$ to $F$ exists an unique morphism $u : m \to l$
+such that  $\forall a \in A$ $f(a) \circ u = g(a)$.
 \end{definition}
 
 
