--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,12 @@
 %% -*- coding:utf-8 -*-
+@misc{ wiki:cone,
+    author = "{Wikipedia contributors}",
+    title = "Cone (category theory) --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    url = "https://en.wikipedia.org/w/index.php?title=Cone_(category_theory)&oldid=827711162",
+    note = "[Online; accessed 10-November-2018]"
+  }
+
 @misc{stanford:linear_logic,
 	author       =	{Di Cosmo, Roberto and Miller, Dale},
 	title        =	{Linear Logic},
