--- a/limits.tex
+++ b/limits.tex
@@ -91,8 +91,6 @@ F: \cat{B} \tof \cat{C}
   \caption{Cone $cone(c, f^{(c)})$} 
   \label{fig:cone}
 \end{figure}
-
-
 Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{B}$ in $\cat{C}$.
 A \textit{cone} to $F$ is an object $d \in \catob{C}$ with
 \mynameref{def:morphism}s $f^{c} = \left\{f_i^{c}: c \to
@@ -157,10 +155,25 @@ such that  $\forall a_i^{(B)} \in \catob{B}$ $f_i^{(l)} \circ u =
 f_i^{(c)}$ i.e. diagram shown on \cref{fig:limit} commutes.
 \end{definition}
 
-\begin{definition}[Category of cones]
-\label{def:category_of_cones}
+\begin{definition}[Colimit]
+\label{def:colimit}
 TBD
 \end{definition}
+
+\begin{definition}[Category of cones]
+\label{def:category_of_cones}
+Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{B}$ in $\cat{C}$.
+
+TBD
+
+The category of cones is denoted as $\Delta \downarrow F$ \cite{wiki:cone}
+\end{definition}
+
+\begin{remark}[Category of cones]
+\label{rem:category_of_cones}
+Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{B}$ in $\cat{C}$.
+TBD
+\end{remark}
 
 
 
