--- a/notations.tex
+++ b/notations.tex
@@ -39,7 +39,8 @@
   \mynameref{def:hilbert_space}}
 \nomenclature{$a^b$}{\mynameref{def:exponential}}
 \nomenclature{$P \implies Q$}{\mynameref{def:implication}}
-\nomenclature{$cone(b, f)$}{\mynameref{def:cone}}
+\nomenclature{$cone(c, f^{(c)})$}{\mynameref{def:cone}}
+\nomenclature{$\Delta \downarrow F$}{\mynameref{def:category_of_cones}}
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
