--- a/limits.tex
+++ b/limits.tex
@@ -171,7 +171,11 @@ The category of cones is denoted as $\Delta \downarrow F$ \cite{wiki:cone}
 
 \begin{remark}[Category of cones]
 \label{rem:category_of_cones}
-Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{B}$ in $\cat{C}$.
+Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{B}$ in $\cat{C}$
+and $\Delta \downarrow F$ is the \mynameref{def:category_of_cones}.
+Then \mynameref{def:limit} is \mynameref{def:terminal_object} in the
+category. \mynameref{def:colimit} is \mynameref{def:initial_object} in the
+category. 
 TBD
 \end{remark}
 
