--- a/limits.tex
+++ b/limits.tex
@@ -155,6 +155,11 @@ such that  $\forall a_i^{(B)} \in \catob{B}$ $f_i^{(l)} \circ u =
 f_i^{(c)}$ i.e. diagram shown on \cref{fig:limit} commutes.
 \end{definition}
 
+\begin{definition}[Co-cone]
+\label{def:cocone}
+TBD
+\end{definition}
+
 \begin{definition}[Colimit]
 \label{def:colimit}
 TBD
@@ -182,3 +187,10 @@ TBD
 
 
 TBD
+
+\section{Categorical objects as limits}
+
+Different choice for category $\cat{B}$ gives different types of
+limits. The empty category will give us the terminal object. The
+\mynameref{def:discrete_category} with 2 elements produces
+\mynameref{def:product} as the \mynameref{def:limit}.
