--- a/limits.tex
+++ b/limits.tex
@@ -188,7 +188,7 @@ TBD
 
 TBD
 
-\section{Categorical objects as limits}
+\section{Categorical constructions as limits}
 
 Different choice for category $\cat{B}$ gives different types of
 limits. The empty category will give us the terminal object. The
