--- a/limits.tex
+++ b/limits.tex
@@ -155,13 +155,7 @@ such that  $\forall a_i^{(B)} \in \catob{B}$ $f_i^{(l)} \circ u =
 f_i^{(c)}$ i.e. diagram shown on \cref{fig:limit} commutes.
 \end{definition}
 
-\begin{definition}[Co-cone]
-\label{def:cocone}
-TBD
-\end{definition}
-
-\begin{definition}[Colimit]
-\label{def:colimit}
+\begin{definition}[Morphisms of cones]
 TBD
 \end{definition}
 
@@ -179,11 +173,20 @@ The category of cones is denoted as $\Delta \downarrow F$ \cite{wiki:cone}
 Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{B}$ in $\cat{C}$
 and $\Delta \downarrow F$ is the \mynameref{def:category_of_cones}.
 Then \mynameref{def:limit} is \mynameref{def:terminal_object} in the
-category. \mynameref{def:colimit} is \mynameref{def:initial_object} in the
+category. ??? \mynameref{def:colimit} is \mynameref{def:initial_object} in the
 category. 
 TBD
 \end{remark}
 
+\begin{definition}[Co-cone]
+\label{def:cocone}
+TBD
+\end{definition}
+
+\begin{definition}[Colimit]
+\label{def:colimit}
+TBD
+\end{definition}
 
 
 TBD
