--- a/cattheory.tex
+++ b/cattheory.tex
@@ -305,6 +305,11 @@
   \mathrm{hom}(\cat{#1})%
 }
 
+\newcommand {\catcone} [2] {%
+  \mathrm{cone}(#1, #2^{(#1)})%
+}
+
+
 \DeclareMathOperator{\dom}{dom}
 \DeclareMathOperator{\cod}{cod}
 
