--- a/limits.tex
+++ b/limits.tex
@@ -99,6 +99,13 @@ indexed by objects from
 $\cat{B}$. The cone is denoted as $\catcone{c}{f}$.
 \end{definition}
 
+\begin{remark}[Coin as natural transformation]
+The \mynameref{def:coin} can be considered as \mynameref{def:nt} as
+follows 
+
+TBD
+\end{remark}
+
 \begin{definition}[Limit]
 \label{def:limit}
 \begin{figure}[H]
