--- a/limits.tex
+++ b/limits.tex
@@ -100,10 +100,15 @@ $\cat{B}$. The cone is denoted as $\catcone{c}{f}$.
 \end{definition}
 
 \begin{remark}[Coin as natural transformation]
-The \mynameref{def:coin} can be considered as \mynameref{def:nt} as
-follows 
-
-TBD
+The \mynameref{def:cone} can be considered as \mynameref{def:nt}.
+There are 2 functors between categories $\cat{B}$ and 
+$\cat{C}$. The first one is the \mynameref{def:diagram_of_shape} $F:
+\cat{B} \tof \cat{C}$. The second one is the 
+\mynameref{def:terminal_object_cat}: 
+$\Delta_c: \cat{B} \tof \cat{C}$. The \mynameref{def:nt} $\Delta_c
+\tont F$ is the set of \mynameref{def:morphism}s from $\cat{C}$ with
+additional relations that are same as conditions defined for
+\mynameref{def:cone} $\catcone{c}{f}$.
 \end{remark}
 
 \begin{definition}[Limit]
