--- a/limits.tex
+++ b/limits.tex
@@ -104,7 +104,7 @@ The \mynameref{def:cone} can be considered as \mynameref{def:nt}.
 There are 2 functors between categories $\cat{B}$ and 
 $\cat{C}$. The first one is the \mynameref{def:diagram_of_shape} $F:
 \cat{B} \tof \cat{C}$. The second one is the 
-\mynameref{def:terminal_object_cat}: 
+\mynameref{def:const_functor}: 
 $\Delta_c: \cat{B} \tof \cat{C}$. The \mynameref{def:nt} $\Delta_c
 \tont F$ is the set of \mynameref{def:morphism}s from $\cat{C}$ with
 additional relations that are same as conditions defined for
