--- a/notations.tex
+++ b/notations.tex
@@ -16,7 +16,9 @@
 \nomenclature{$\cod f$}{\mynameref{def:codomain}}
 \nomenclature{$F: \cat{C} \tof \cat{D}$}{\mynameref{def:functor}
   (double arrow)}
-\nomenclature{$F \circ G$}{\mynameref{def:functor_composition} (circle dot)}
+\nomenclature{$F \circ G$}{\mynameref{def:functor_composition} (circle
+  dot)}
+\nomenclature{$\Delta_c$}{\mynameref{def:const_functor}}
 \nomenclature{$\alpha, \beta$}{\mynameref{def:nt}
  (Greek small letters)}
 \nomenclature{$\alpha: F \tont G$}{\mynameref{def:nt}
@@ -40,7 +42,8 @@
 \nomenclature{$a^b$}{\mynameref{def:exponential}}
 \nomenclature{$P \implies Q$}{\mynameref{def:implication}}
 \nomenclature{$\catcone{c}{f}$}{\mynameref{def:cone}}
-\nomenclature{$\Delta \downarrow F$}{\mynameref{def:category_of_cones}}
+\nomenclature{$\Delta \downarrow
+  F$}{\mynameref{def:category_of_cones}}
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
